src/test/resources/crux/stages/type-check/test21.crx
// test print character

void main() {
  printChar(72);
  printChar(101);
  printChar(108);
  printChar(108);
  printChar(111);
  println();
}
